--- a/index.html
+++ b/index.html
@@ -23,16 +23,39 @@
                 <a href="#!" class="nav__logo">
                     <img src="/assets/img/icons/logo.svg" alt="Логотип GTHREES" class="nav__logo-icon">
                 </a>
+                <a href="#!" class="nav__mobile">
+                    <img src="/assets/img/icons/logo-mobile.svg" alt="Логотип GTHREES" class="nav__logo-icon">
+                </a>
                 <ul class="nav__menu">
-                    <li class="nav__menu-item navitem">
-                        <a href="" class="navitem__item">
-                            <span class="navitem__item-text">Наши услуги</span>
-                            <img src="assets/img/icons/arrow-lng.svg" alt="" class="navitem__item-image">
+                    <li class="nav__menu-item navitem serve">
+                        <a href="#!" class="navitem__item serve__item">
+                            <span class="navitem__item-text serve__item-text">Наши услуги</span>
+                            <img src="assets/img/icons/arrow-lng.svg" alt="" class="navitem__item-image serve__item-image">
                         </a>
-
+                        <ul class="serve__dropdown">
+                            <li class="serve__dropdown-item">
+                                <a href="#!" class="serve__dropdown-item--link">Авиаперевозки</a>
+                            </li>
+                            <li class="serve__dropdown-item">
+                                <a href="#!" class="serve__dropdown-item--link">Автомобильные перевозки</a>
+                            </li>
+                            <li class="serve__dropdown-item">
+                                <a href="#!" class="serve__dropdown-item--link">Мультимодальные перевозки</a>
+                            </li>
+                            <li class="serve__dropdown-item">
+                                <a href="#!" class="serve__dropdown-item--link">Железнодорожные перевозки</a>
+                            </li>
+                            <li class="serve__dropdown-item">
+                                <a href="#!" class="serve__dropdown-item--link">Перевозки тяжеловесных и негабаритных грузов</a>
+                            </li>
+                            <li class="serve__dropdown-item">
+                                <a href="#!" class="serve__dropdown-item--link">Перевозки опасных грузов</a>
+                            </li>
+                        </ul>
                     </li>
+                    
                     <li class="nav__menu-item navitem">
-                        <a href="" class="navitem__item">Контакты</a>
+                        <a href="/contacts.html" class="navitem__item">Контакты</a>
                     </li>
                     <li class="nav__menu-item navitem">
                         <a href="tel:375295462567" class="navitem__item">+375(29)546-25-67</a>
@@ -533,7 +556,69 @@
                         </div>
                     </div>
                 </section>
-                <section class="request">
+                <section class="contact">
+                    <div class="contact__container ccont">
+                        <h2 class="ccont__title">Связаться с нами</h2>
+                        <div class="ccont__content">
+                            <div class="ccont__content-text ctext">
+                                <h3 class="ctext__text">Оставьте заявку и наш менеджер свяжется с вами в <span class="hero">ближайшее время</span></h3>
+                            </div>
+                            <div class="ccont__content-form cform">
+                                <div class="cform__form">
+                                    
+                                    <input type="text" placeholder="ФИО" class="cform__form-input">
+                                    <input type="text" placeholder="Телефон" class="cform__form-input">
+                                    <input type="text" placeholder="E-mail" class="cform__form-input">
+                                    <div class="cform__form-input selector">
+                                        <h3 class="selector__text">Услуга</h3>
+                                        <div class="selector__select">
+                                            <span class="selector__select-title">автоперевозки</span>
+                                            <img src="assets/img/icons/arrow-down.svg" alt="" class="selector__select-image">
+                                        </div>
+                                        <div class="selector__options">
+                                            <div class="selector__select-option" data-value="auto">Автоперевозки</div>
+                                            <div class="selector__select-option" data-value="air">Авиаперевозки</div>
+                                            <div class="selector__select-option" data-value="mmod">Мультимодальные перевозки</div>
+                                            <div class="selector__select-option" data-value="railroad">Железнодорожные перевозки</div>
+                                            <div class="selector__select-option" data-value="heavy">Перевозки тяжелых и негабаритных грузов</div>
+                                            <div class="selector__select-option" data-value="danger">Перевозки опасных грузов</div>
+                                        </div>
+                                    </div>
+                                    <input type="text" placeholder="Сообщение" class="cform__form-input message">
+                                </div>
+                                <a href="#!" class="cform__button">
+                                    <h3 class="cform__button-text">Отправить заявку</h3>
+                                    <img src="assets/img/icons/arrow.svg" alt="" class="cgorm__button-arrow">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contact__footer cfoot">
+                        <div class="cfoot__upper cfup">
+                            <div class="cfup__mail">
+                                <h3 class="cfup__mail-title">Для сотрудничества:</h3>
+                                <a href="#!" class="cfup__mail-mail">info@gthrees.com</a>
+                            </div>
+                            <div class="cfup__subscribe">
+                                <a href="#!" class="cfup__subscribe-link">Подписаться</a>
+                                <a href="#!" class="cfup__subscribe-number">+375(17)252-22-25</a>
+                            </div>
+                            <div class="cfup__sell">
+                                <h3 class="cfup__sell-title">Отдел продаж:</h3>
+                                <a href="#!" class="cfup__sell-mail">sales@gthrees.com</a>
+                            </div>
+                        </div>
+                        <div class="contact__bottom cfbot">
+                            <h3 class="cfbot__text">© 2023, GTHREES</h3>
+                            <a href="#!" class="cfbot__likeit">
+                                <h3 class="cfbot__likeit-text">Разработано в</h3>
+                                <img src="assets/img/icons/likeIt.svg" alt="" class="cfbot__likeit-icon">
+                            </a>
+                        </div>
+                        <img src="assets/img/icons/title-dark.svg" alt="" class="cfoot__title">
+                    </div>
+                </section>
+                <!-- <section class="request">
                     <div class="request__container rcont">
                         <h2 class="rcont__title">Связаться с нами</h2>
                         <div class="rcont__request">
@@ -603,7 +688,7 @@
                     </div>
                     <img src="assets/img/icons/title.svg" alt="" class="rcont__logo">
                     </div>
-                </section>
+                </section> -->
             </div>
         </main>
         <footer class="application__footer footer">
