--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div class="application__template">
         <header class="application__header header" id="header">
             <div class="header__container container nav">
-                <a href="#!" class="nav__logo">
+                <a href="/index.html" class="nav__logo">
                     <img src="/assets/img/icons/logo.svg" alt="Логотип GTHREES" class="nav__logo-icon">
                 </a>
-                <a href="#!" class="nav__mobile">
+                <a href="/index.html" class="nav__mobile">
                     <img src="/assets/img/icons/logo-mobile.svg" alt="Логотип GTHREES" class="nav__logo-icon">
                 </a>
                 <ul class="nav__menu">
@@ -34,22 +34,22 @@
                         </a>
                         <ul class="serve__dropdown">
                             <li class="serve__dropdown-item">
-                                <a href="#!" class="serve__dropdown-item--link">Авиаперевозки</a>
+                                <a href="/services.html" class="serve__dropdown-item--link">Авиаперевозки</a>
                             </li>
                             <li class="serve__dropdown-item">
-                                <a href="#!" class="serve__dropdown-item--link">Автомобильные перевозки</a>
+                                <a href="/services.html" class="serve__dropdown-item--link">Автомобильные перевозки</a>
                             </li>
                             <li class="serve__dropdown-item">
-                                <a href="#!" class="serve__dropdown-item--link">Мультимодальные перевозки</a>
+                                <a href="/services.html" class="serve__dropdown-item--link">Мультимодальные перевозки</a>
                             </li>
                             <li class="serve__dropdown-item">
-                                <a href="#!" class="serve__dropdown-item--link">Железнодорожные перевозки</a>
+                                <a href="/services.html" class="serve__dropdown-item--link">Железнодорожные перевозки</a>
                             </li>
                             <li class="serve__dropdown-item">
-                                <a href="#!" class="serve__dropdown-item--link">Перевозки тяжеловесных и негабаритных грузов</a>
+                                <a href="/services.html" class="serve__dropdown-item--link">Перевозки тяжеловесных и негабаритных грузов</a>
                             </li>
                             <li class="serve__dropdown-item">
-                                <a href="#!" class="serve__dropdown-item--link">Перевозки опасных грузов</a>
+                                <a href="/services.html" class="serve__dropdown-item--link">Перевозки опасных грузов</a>
                             </li>
                         </ul>
                     </li>
@@ -80,25 +80,25 @@
                     <div class="burger__container brcont">
                         <div class="brcont__column fclm">
                             <div class="fclm__col">
-                                <a href="" class="fclm__col-title">УСЛУГИ</a>
+                                <a href="/services.html" class="fclm__col-title">УСЛУГИ</a>
                                 <ul class="fclm__col-column">
                                     <li class="fclm__col-column--text">
-                                        <a href="#!" class="fclm__col-column--textLink">авиаперевозки</a>
+                                        <a href="/services.html" class="fclm__col-column--textLink">авиаперевозки</a>
                                     </li>
                                     <li class="fclm__col-column--text">
-                                        <a href="#!" class="fclm__col-column--textLink">автомобильные перевозки</a>
+                                        <a href="/services.html" class="fclm__col-column--textLink">автомобильные перевозки</a>
                                     </li>
                                     <li class="fclm__col-column--text">
-                                        <a href="#!" class="fclm__col-column--textLink">мультимодальные перевозки</a>
+                                        <a href="/services.html" class="fclm__col-column--textLink">мультимодальные перевозки</a>
                                     </li>
                                     <li class="fclm__col-column--text">
-                                        <a href="#!" class="fclm__col-column--textLink">железнодорожные перевозки</a>
+                                        <a href="/services.html" class="fclm__col-column--textLink">железнодорожные перевозки</a>
                                     </li>
                                     <li class="fclm__col-column--text">
-                                        <a href="#!" class="fclm__col-column--textLink">перевозки опасных грузов</a>
+                                        <a href="/services.html" class="fclm__col-column--textLink">перевозки опасных грузов</a>
                                     </li>
                                     <li class="fclm__col-column--text">
-                                        <a href="#!" class="fclm__col-column--textLink">перевозки тяжеловесных и негабаритных грузов</a>
+                                        <a href="/services.html" class="fclm__col-column--textLink">перевозки тяжеловесных и негабаритных грузов</a>
                                     </li>
                                 </ul>
                             </div>
@@ -106,10 +106,10 @@
                                 <a href="#!" class="fclm__comp-title">КОМПАНИЯ</a>
                                 <ul class="fclm__comp-column">
                                     <li class="fclm__comp-column--text">
-                                        <a href="#!" class="fclm__comp-column--textLink">о компании</a>
+                                        <a href="/company.html" class="fclm__comp-column--textLink">о компании</a>
                                     </li>
                                     <li class="fclm__comp-column--text">
-                                        <a href="#!" class="fclm__comp-column--textLink">вакансии</a>
+                                        <a href="/hire.html" class="fclm__comp-column--textLink">вакансии</a>
                                     </li>
                                 </ul>
                             </div>
@@ -164,7 +164,7 @@
                                             предлагая Вам наилучшее решение с точки зрения стоимости, качества и
                                             времени.</p>
                                         <a href="#!" class="servicelevel__button">
-                                            <a href="company.html" class="servicelevel__button-text">получить консультацию</a>
+                                            <a href="#call" class="servicelevel__button-text">получить консультацию</a>
                                             <img src="assets/img/icons/arrow.svg" alt=""
                                                 class="servicelevel__button-icon">
                                         </a>
@@ -286,7 +286,7 @@
                             </div>
                             <img src="assets/img/icons/map.svg" alt="Изображение карты мира" class="cmp__map-map">
                         </div>
-                        <a href="#!" class="cmp__link">
+                        <a href="/company.html" class="cmp__link">
                             <h3 class="cmp__link-text">УЗНАТЬ БОЛЬШЕ</h3>
                             <img src="assets/img/icons/arrow.svg" alt="Значок стрелки" class="cmp__link-icon">
                         </a>
@@ -304,32 +304,32 @@
                                         логистический сервис, применяя индивидуальный подход к каждому нашему клиенту.
                                     </p>
                                 </div>
-                                <a href="#!" class="serv__link">
+                                <a href="/services.html" class="serv__link">
                                     <h3 class="serv__link-title">ВСЕ УСЛУГИ</h3>
                                     <img src="assets/img/icons/arrow.svg" alt="" class="serv__link-image">
                                 </a>
                                 <div class="serv__scroll">
                                     <div class="serv__scroll-cards scrcards">
-                                        <a href="#!" class="scrcards__card">
+                                        <a href="/services.html" class="scrcards__card">
                                             <img src="assets/img/images/plane.jpg" alt="" class="scrcards__card-image">
                                             <div class="scrcards__card-text">
                                                 <h3 class="scrcards__card-text--Title">Авиаперевозки</h3>
                                             </div>
                                         </a>
-                                        <a href="#!" class="scrcards__card">
+                                        <a href="/services.html" class="scrcards__card">
                                             <img src="assets/img/images/road.png" alt="" class="scrcards__card-image">
                                             <div class="scrcards__card-text">
                                                 <h3 class="scrcards__card-text--Title">Автомобильные перевозки</h3>
                                             </div>
                                         </a>
-                                        <a href="#!" class="scrcards__card">
+                                        <a href="/services.html" class="scrcards__card">
                                             <img src="assets/img/images/railroad.png" alt=""
                                                 class="scrcards__card-image">
                                             <div class="scrcards__card-text">
                                                 <h3 class="scrcards__card-text--Title">Железнодорожные перевозки</h3>
                                             </div>
                                         </a>
-                                        <a href="#!" class="scrcards__card">
+                                        <a href="/services.html" class="scrcards__card">
                                             <img src="assets/img/images/container.png" alt=""
                                                 class="scrcards__card-image">
                                             <div class="scrcards__card-text">
@@ -430,14 +430,14 @@
                                 применяя индивидуальный подход к клиентам.</p>
                         </div>
                         <div class="pcont__nav">
-                            <a href="" class="pcont__nav-item highlited">Химия</a>
-                            <a href="" class="pcont__nav-item">Машиностроение</a>
-                            <a href="" class="pcont__nav-item">Металлургия</a>
-                            <a href="" class="pcont__nav-item">Фармацевтика</a>
-                            <a href="" class="pcont__nav-item">Продукты питания</a>
-                            <a href="" class="pcont__nav-item">Строительство</a>
-                            <a href="" class="pcont__nav-item">Деревообработка</a>
-                            <a href="" class="pcont__nav-item">Одежда</a>
+                            <a href="#!" class="pcont__nav-item highlited">Химия</a>
+                            <a href="#!" class="pcont__nav-item">Машиностроение</a>
+                            <a href="#!" class="pcont__nav-item">Металлургия</a>
+                            <a href="#!" class="pcont__nav-item">Фармацевтика</a>
+                            <a href="#!" class="pcont__nav-item">Продукты питания</a>
+                            <a href="#!" class="pcont__nav-item">Строительство</a>
+                            <a href="#!" class="pcont__nav-item">Деревообработка</a>
+                            <a href="#!" class="pcont__nav-item">Одежда</a>
                         </div>
                         <div class="pcont__col">
                             <div class="pcont__col-item it1">
@@ -456,10 +456,10 @@
                                 <img src="assets/img/icons/technonikol.svg" alt="Логотип Технониколь" class="pcont__col-item--image">
                             </div>
                             <div class="pcont__col-item it6">
-                                <div class="pcont__col-item--container bubilda">
+                                <a href="#!" class="pcont__col-item--container bubilda">
                                     <h3 class="bubilda__text">СТАТЬ ПАРТНЕРОМ</h3>
                                     <img src="assets/img/icons/arrow.svg" alt="" class="bubilda__image">
-                                </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -556,7 +556,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="contact">
+                <section class="contact" id="call">
                     <div class="contact__container ccont">
                         <h2 class="ccont__title">Связаться с нами</h2>
                         <div class="ccont__content">
